--- a/components/social/social.astro
+++ b/components/social/social.astro
@@ -1,5 +1,5 @@
 ---
-import preferences from "../../../data/preferences.json";
+import preferences from "@data/preferences.json";
 import Icon from "@shared/icon.astro";
 
 const icons: Record<string, string> = {
