--- a/shared/astro/Header.astro
+++ b/shared/astro/Header.astro
@@ -1,6 +1,6 @@
 ---
 import { convertColorString } from "src/util";
-import preferences from "data/preferences.json";
+import preferences from "@data/preferences.json";
 import Navigation from "./Navigation.astro";
 import Social from "@components/social/social.astro";
 
