--- a/components/form/form.astro
+++ b/components/form/form.astro
@@ -15,7 +15,7 @@ const id = (name || "") + "-" + (key || "");
 
 const components: Record<string, any> = {};
 const componentImports = import.meta.glob(
-  ["/src/components/form/**/*.jsx", "/src/components/form/**/*.astro"],
+  ["/src/mws-astro/components/form/**/*.jsx", "/src/mws-astro/components/form/**/*.astro"],
   {
     eager: true,
   }
