--- a/components/layout/columns/columns.astro
+++ b/components/layout/columns/columns.astro
@@ -11,7 +11,7 @@ const contentBlocks = Astro.props.content_blocks;
 
 const components: Record<string, any> = {};
 const componentImports = import.meta.glob(
-  ["/src/components/**/*.jsx", "/src/components/**/*.astro"],
+  ["/src/mws-astro/components/**/*.jsx", "/src/mws-astro/components/**/*.astro"],
   {
     eager: true,
   }
