--- a/shared/astro/Navigation.astro
+++ b/shared/astro/Navigation.astro
@@ -1,5 +1,5 @@
 ---
-import preferences from "data/preferences.json";
+import preferences from "@data/preferences.json";
 
 export interface Props {
   pages?: any;
