Add Missing Component warning

--- a/src/components/form/form.astro
+++ b/src/components/form/form.astro
@@ -47,9 +47,11 @@ const background = convertColorString(background_color);
         if (Component) {
           return <Component {...block} key={String(i) + (key || "")} />;
         }
+        const warnstring = `[${Astro.self.name}] Component ${block._bookshop_name} could not be found!`;
+        console.warn(warnstring);
         return (
           <div class="missing-component">
-            {`Component ${block._bookshop_name} could not be found!`}
+            {warnstring}
           </div>
         );
       })
