--- a/src/components/layout/columns/columns.astro
+++ b/src/components/layout/columns/columns.astro
@@ -116,9 +116,11 @@ let items = layoutBlocks.length ? layoutBlocks : contentBlocks;
           </div>
         );
       }
+      const warnstring = `[${Astro.self.name}] Component ${block._bookshop_name} could not be found!`;
+      console.warn(warnstring);
       return (
         <div class="missing-component">
-          {`Component ${block._bookshop_name} could not be found!`}
+          {warnstring}
         </div>
       );
     })
