--- a/src/components/richtext/richtext.astro
+++ b/src/components/richtext/richtext.astro
@@ -1,6 +1,6 @@
 ---
 import MarkdownIt from "markdown-it";
-import { convertColorString } from "src/util";
+import { convertColorString } from "@mws-astro/util";
 const md = new MarkdownIt({ html: true });
 
 export interface Props {
