--- a/src/shared/astro/Footer.astro
+++ b/src/shared/astro/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { convertColorString } from "src/util";
+import { convertColorString } from "@mws-astro/util";
 import Social from "@components/social/social.astro";
 import preferences from "@data/preferences.json";
 const currentYear = new Date().getFullYear();
