--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,9 +17,9 @@
   --text-size-xsmall: 12px;
   --text-size-xxsmall: 10px;
 
-  --feature-font-family: "Rosewood W05 Fill";
-  --default-font-family: "Ronnia W01 Light";
-  --bold-font-family: "Ronnia W01 Regular";
+  --feature-font-family: "Open Sans";
+  --default-font-family: "Open Sans";
+  --bold-font-family: "Open Sans Semibold";
 
   --color-primary: 24 58 78;
   --color-accent: 120 45 49;
