Fix bold font for lightbox counter

--- a/src/components/lightbox/lightbox.astro
+++ b/src/components/lightbox/lightbox.astro
@@ -277,6 +277,7 @@ const { collection } = Astro.props;
     align-items: center;
     color: white;
     font-family: var(--bold-font-family);
+    font-weight: var(--bold-font-weight);
     font-size: 2rem;
   }
 
