--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,11 +1,11 @@
 @import "editor";
-@import "custom";
 
 :root {
   --page-max-width: 1920px;
 
   --indent: min(8vw, calc(var(--page-max-width) * 0.08));
   --column-gap: calc(var(--indent) * 0.5);
+  --gallery-gap: 1rem;
   --text-gap: 2rem;
   --text-gap-small: 1rem;
   --text-size-huge: 46px;
@@ -17,9 +17,9 @@
   --text-size-xsmall: 12px;
   --text-size-xxsmall: 10px;
 
-  --feature-font-family: "Open Sans";
   --default-font-family: "Open Sans";
-  --bold-font-family: "Open Sans Semibold";
+  --feature-font-family: var(--default-font-family);
+  --bold-font-family: var(--default-font-family);
 
   --color-primary: 24 58 78;
   --color-accent: 120 45 49;
@@ -206,3 +206,7 @@ button {
 section {
   background-color: rgb(var(--background-color));
 }
+
+// Site specific custom styling
+@import "@custom/custom.editor";
+@import "@custom/custom";
