--- a/src/components/richtext/richtext.astro
+++ b/src/components/richtext/richtext.astro
@@ -22,8 +22,15 @@ const background = convertColorString(background_color);
 
 <style>
   section {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+  }
+</style>
+
+<style is:global>
+  .rich-text img {
+    margin-bottom: 2rem;
   }
 </style>
