--- a/src/components/lightbox/lightbox.astro
+++ b/src/components/lightbox/lightbox.astro
@@ -245,8 +245,7 @@ const { collection } = Astro.props;
     position: fixed;
     z-index: 10000;
     inset: 0;
-    background-color: #000d;
-    backdrop-filter: blur(4px) contrast(60%);
+    background-color: #000;
     padding: 0 8rem;
     animation: lightbox 0.4s ease;
   }
