--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,25 +24,12 @@
   --color-primary: 24 58 78;
   --color-accent: 120 45 49;
   --text-color: var(--color-primary);
-  --heading-color: var(--color-primary);
+  --heading-color: var(--text-color);
 
   --header-background-color: 0 0 0 / 0.6;
   --header-background-color-bottom: 0 0 0 / 0;
   --header-color: 255 255 255;
   --header-height: 72px;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-primary: 24 58 78;
-    --color-accent: 120 45 49;
-    --text-color: var(--color-primary);
-    --heading-color: var(--color-primary);
-
-    --header-background-color: 0 0 0 / 0.6;
-    --header-background-color-bottom: 0 0 0 / 0;
-    --header-color: 255 255 255;
-  }
 }
 
 * {
@@ -85,7 +72,24 @@ section {
   padding: var(--indent);
 }
 
-section:not(#\9).no-indent {
+// section:not(#\9).no-indent {
+//   padding: 0;
+
+//   &-top {
+//     padding-top: 0;
+//   }
+//   &-bottom {
+//     padding-bottom: 0;
+//   }
+//   &-left {
+//     padding-left: 0;
+//   }
+//   &-right {
+//     padding-right: 0;
+//   }
+// }
+
+section.no-indent {
   padding: 0;
 
   &-top {
@@ -154,7 +158,7 @@ h4,
 h5,
 h6 {
   margin: 0;
-  line-height: 2;
+  line-height: 1.7;
   font-family: var(--default-font-family);
   color: rgb(var(--heading-color));
 }
@@ -172,6 +176,10 @@ h2 {
 h3 {
   font-size: var(--text-size-large);
   font-family: var(--feature-font-family);
+}
+
+a {
+  color: rgb(var(--text-color));
 }
 
 hr {
