--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -30,6 +30,17 @@
   --header-background-color-bottom: 0 0 0 / 0;
   --header-color: 255 255 255;
   --header-height: 72px;
+
+  --border-radius: 0.3rem;
+
+  --info-color: 147 205 223;
+  --warning-color: 233 205 115;
+  --details-color: 128 128 128;
+  --error-color: 211 65 65;
+
+  --placeholder-color: var(--text-color) / 0.8;
+  --form-border: 1px solid rgb(var(--text-color) / 0.6);
+  --form-background: var(--text-color) / 0.05;
 }
 
 * {
@@ -106,18 +117,16 @@ section.no-indent {
   }
 }
 
+main > :first-child {
+  padding-top: calc(var(--indent) + var(--header-height));
+}
+
 form {
   label {
     display: block;
     font-size: var(--text-size-small);
     font-family: var(--bold-font-family);
     margin: 0 0 5px;
-  }
-
-  input,
-  textarea {
-    width: 100%;
-    background-color: white;
   }
 }
 
