--- a/src/components/form/inputs/checkbox/checkbox.astro
+++ b/src/components/form/inputs/checkbox/checkbox.astro
@@ -1,4 +1,5 @@
 ---
+import Label from '@components/form/label.astro';
 export interface Props {
   name: string;
   label: string;
@@ -13,12 +14,22 @@ const id = (name || "") + "-" + (key || "");
 ---
 
 <div class="input checkbox">
-  <input type="checkbox" {name} {id} {required} {checked} />
-  <label for={id}>{label}</label>
+  <input type="checkbox" {name} {id} {required} aria-required={required} {checked} />
+  <Label for={id} {required}>{label}</Label>
 </div>
 <style>
   div {
     display: flex;
-    gap: 1.5rem;
+    align-items: center;
+    gap: 1rem;
+    padding: .2rem 1rem;
+  }
+
+  input {
+    flex: 0 1 1em;
+  }
+
+  label {
+    margin: 0;
   }
 </style>
