--- a/src/components/form/inputs/email/email.astro
+++ b/src/components/form/inputs/email/email.astro
@@ -1,4 +1,5 @@
 ---
+import Label from '@components/form/label.astro';
 export interface Props {
   name: string;
   label: string;
@@ -12,13 +13,23 @@ const id = (name || "") + "-" + (key || "");
 ---
 
 <div class="input email">
-  <label for={id}>{label}</label>
+  <Label for={id} {required}>{label}</Label>
   <input
     type="email"
     name={name}
     {id}
     {required}
+    aria-required={required}
     placeholder={placeholder}
     maxlength="254"
   />
 </div>
+
+<style>
+  input {
+    width: 100%;
+    background-color: rgb(var(--form-background));
+    border-radius: var(--border-radius);
+    border: var(--form-border);
+  }
+</style>
