--- a/src/components/form/inputs/select/select.astro
+++ b/src/components/form/inputs/select/select.astro
@@ -1,4 +1,5 @@
 ---
+import Label from '@components/form/label.astro';
 export interface Props {
   name: string;
   label: string;
@@ -12,9 +13,18 @@ const id = (name || "") + "-" + (key || "");
 ---
 
 <div class="input select">
-  <label for={id}>{label}</label>
-  <select {name} {id} {required}>
+  <Label for={id} {required}>{label}</Label>
+  <select {name} {id} {required} aria-required={required}>
     <option value="">-- Select --</option>
     {options && options.map((opt, i) => <option value={opt}>{opt}</option>)}
   </select>
 </div>
+
+<style>
+  select {
+    width: 100%;
+    background-color: rgb(var(--form-background));
+    border-radius: var(--border-radius);
+    border: var(--form-border);
+  }
+</style>
