--- a/src/components/form/inputs/textarea/textarea.astro
+++ b/src/components/form/inputs/textarea/textarea.astro
@@ -1,4 +1,5 @@
 ---
+import Label from '@components/form/label.astro';
 export interface Props {
   name: string;
   label: string;
@@ -16,12 +17,22 @@ const id = (name || "") + "-" + (key || "");
 ---
 
 <div class="input textarea">
-  <label for={id}>{label}</label>
+  <Label for={id} {required}>{label}</Label>
   <textarea
     {id}
     name={name}
     {required}
+    aria-required={required}
     placeholder={placeholder}
     minlength={minlength}
     maxlength={maxlength}></textarea>
 </div>
+
+<style>
+  textarea {
+    width: 100%;
+    background-color: rgb(var(--form-background));
+    border-radius: var(--border-radius);
+    border: var(--form-border);
+  }
+</style>
