--- a/src/components/image/image.astro
+++ b/src/components/image/image.astro
@@ -91,13 +91,17 @@ const id = `image${key}`;
 
 <style lang="scss">
   section {
+    position: relative;
     height: calc(var(--height) * 1vh);
     overflow: hidden;
   }
 
   figure {
-    height: 100%;
-    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
 
   img {
