--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,6 +26,9 @@
   --text-color: var(--color-primary);
   --heading-color: var(--text-color);
 
+  --page-background-color: 255 255 255;
+  --page-background-shadow: 0 0 0 / 0.3;
+
   --header-background-color: 0 0 0 / 0.6;
   --header-background-color-bottom: 0 0 0 / 0;
   --header-color: 255 255 255;
@@ -57,13 +60,21 @@ html {
   font-family: var(--default-font-family);
   display: grid;
   grid-template-columns: 1fr min(var(--page-max-width), 100vw) 1fr;
-  background: linear-gradient(
-    to right,
-    white,
-    #ddd calc((100% - var(--page-max-width)) * 0.5),
-    #ddd calc((100% - var(--page-max-width)) * 0.5 + var(--page-max-width)),
-    white
-  );
+  // background: linear-gradient(
+  //   to right,
+  //   rgb(var(--page-background-color)),
+  //   rgb(var(--page-background-shadow))
+  //     calc((100% - var(--page-max-width)) * 0.5),
+  //   rgb(var(--page-background-shadow))
+  //     calc((100% - var(--page-max-width)) * 0.5 + var(--page-max-width)),
+  //   rgb(var(--page-background-color))
+  // );
+
+  background-color: rgb(var(--page-background-color));
+}
+
+article {
+  box-shadow: 0 0 10rem rgb(var(--page-background-shadow));
 }
 
 body {
