Update image component

--- a/src/components/gallery/gallery.astro
+++ b/src/components/gallery/gallery.astro
@@ -145,7 +145,7 @@ const id = `gallery${key}`;
       left: 0;
       right: 0;
       padding: 2rem;
-      background: linear-gradient(to right, rgb(var(--background-color) / 0.7), rgb(var(--background-color) / 0.5));
+      background: linear-gradient(to right, rgb(var(--background-color, var(--article-background-color)) / 0.7), rgb(var(--background-color, var(--article-background-color)) / 0.5));
     }
   }
 </style>
