--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,6 +38,7 @@ const {
 import preferences from "@data/preferences.json";
 
 const pageTitle = title + preferences.general.browser_window_title_suffix;
+const headerHeight = preferences.header.height;
 const style: any = {};
 const pageWidth = preferences.page.maximum_page_width;
 const favicon = preferences.general.favicon;
@@ -45,6 +46,7 @@ const appleTouchIcon = preferences.general["apple-touch-icon"];
 const faviconType = mimetypes[favicon.substring(favicon.lastIndexOf(".") + 1)];
 
 pageWidth && (style["--page-max-width"] = pageWidth + "px");
+headerHeight && (style["--header-height"] = headerHeight + "px");
 ---
 
 <!DOCTYPE html>
