--- a/src/shared/astro/Markdown.astro
+++ b/src/shared/astro/Markdown.astro
@@ -1,7 +1,9 @@
 ---
 import { Markdown as RemoteMarkdown } from "astro-remote";
-import Blockquote from "@components/Blockquote/Blockquote.astro";
-import Icon from "@shared/Icon.astro";
+import Blockquote from "@components/blockquote/blockquote.astro";
+import Icon from "@shared/icon.astro";
+import Mailbuild from "@components/mailbuild/mailbuild.astro";
+import Facebook from "@components/facebook/facebook.astro"
 
 const { content } = Astro.props;
 ---
@@ -9,5 +11,5 @@ const { content } = Astro.props;
 <RemoteMarkdown
   {content}
   sanitize={{ allowComponents: true }}
-  components={{ blockquote: Blockquote, icon: Icon }}
+  components={{ blockquote: Blockquote, icon: Icon, Newsletter: Mailbuild, Facebook }}
 />
